syntax = "proto3";
//option java_package = "com.exchange2currency.ef.currencyprice.grpc";
option java_package = "com.exchange2currency.ef.currencyconvert.grpc";
//option js_ackage = "com.exchange2currency.ef.currencyprice.grpc";
option go_package = "com/exchange2currency/currency/client/grpc";

service PriceRPC {

    //Quotation
    rpc GetQuotation(GetQuotationRequest) returns (GetQuotationResponse) {};    //cmd: 1 2

    //QuotationStop
    rpc GetQuotationStop(GetQuotationStopRequest) returns (GetQuotationStopResponse) {};    //cmd: 3 4

    // SymbolsRate
    rpc GetSymbolsRate(GetSymbolsRateRequest) returns (GetSymbolsRateResponse) {};  //cmd: 5 6
}



service CurrencyRPC {
    // Get Tokens Type
    rpc GetCurrencyTokens(GetCurrencyTokensRequest) returns (GetCurrencyTokensResponse){}   //cmd: 7 8
    // GetTokensList
    rpc GetCurrencyTokensList(GetCurrencyTokensListRequest) returns (GetCurrencyTokensListResponse){}   //cmd: 9 10

    //CurrentCurrencyTokens
    rpc GetCurrentCurrencyTokens(GetCurrentCurrencyTokensRequest) returns (GetCurrentCurrencyTokensResponse) {};    //cmd: 11 12

    //DefaultCurrencyTokensList
    rpc GetDefaultCurrencyTokensList(GetDefaultCurrencyTokensListRequest) returns (GetDefaultCurrencyTokensListResponse) {};    //cmd: 13 14
}

service TradeRPC {
    rpc GetKLine(GetKLineRequest)  returns (GetKLineResponse) {};       //cmd: 15 16
}

message CommandHead {

    int32 cmd = 1;
    string cid = 2;
}

message GetQuotationStopRequest {

    int32 cmd = 1;  //3
    string cid = 2;
}

message GetQuotationStopResponse {

    int32 cmd = 1;  //4
    string cid = 2;
}

message GetCurrencyTokensListRequest {

    int32 cmd = 1;      // id: 9
    string cid = 2;
    //语言
    string lang = 3;
}


message GetCurrencyTokensRequest {

    int32 cmd = 1;      // id: 7
    string cid = 2;

    string lang = 3;
    string token     = 4;
}


message GetCurrencyTokensResponse {
    int32 cmd = 1;      // id: 8
    string cid = 2;

    string token       = 3;
    //currencyType: currency、 digital, futures
    string currencyType       = 4;

    string name     = 5;

    string icon  = 6;

    string unitName = 7;

    string usd_amount       = 8;
    int32 base_unit    = 9;

    string update_date = 10;

    string price = 11;

    string countryCode       = 12;
}

message GetCurrencyTokensListMap {
    //字母
    string fchat = 1;
    repeated GetCurrencyTokensResponse data = 2;
}


message GetCurrencyTokensListResponse {
    //命令名称
    int32 cmd = 1;      // id: 10
    string cid = 2;
    repeated GetCurrencyTokensListMap data = 3;
    //更新日期
    string update_date = 4;
}

message GetQuotationRequest {

    int32 cmd = 1;      // id: 1
    string cid = 2;

    string lang = 3;

    string tokenFrom              = 4;

    string tokenTo              = 5;
    //dateUnit： day: 24h week: 7D，1month: 1M, 6month: 6M, 1years 1Y, 3years: 3Y
    string dateUnit         =  6;
}

message QutationBaseData {
    string priceFrom = 1;
    string priceTo = 2;
    string price_date    = 3;   //2022-08-09 32:10:10  103 list(d, d, n, d)
    int64 price_time    = 4;
}

// tab = '24H';
//

message GetQuotationResponse {

    int32 cmd = 1;      // id: 2
    string cid = 2;
    string tokenFrom              =3;
    string tokenTo              =4;
    string dateUnit         = 5;
    string amount = 6;
    repeated QutationBaseData data          = 7;

    string priceFrom = 8;
    string priceTo = 9;
    bool is_real = 10;
}

message GetSymbolsRateRequest {

    int32 cmd = 1;      // id: 5
    string cid = 2;

    string lang = 3;
    string  tokens=4;  //"cny(usd,ero, btc,aud),usd(cny,ero, btc,aud),ero(cny,ero, btc,aud),btc(cny,ero, btc,aud),aud(cny,ero, btc,aud)"
    // cny(cusd)
}

message RateBaseData{
    string token       = 1;
    string price    = 2;
    string price1 = 3;
}

message GetSymbolsRateItem {
    string  token = 1;
    map<string, RateBaseData> data = 2;
    string price = 3;
}

message GetSymbolsRateResponse {

    int32 cmd = 1;      // id: 6
    string cid = 2;
    map<string, GetSymbolsRateItem> data = 3;

    string update_date = 4;
    bool is_real = 5;
}


message GetCurrentCurrencyTokensRequest {

    int32 cmd = 1;      // id: 11
    string cid = 2;

    string lang = 3;

    int32 count = 4;

    string location = 5;
}

message GetCurrentCurrencyTokensResponse {

    int32 cmd = 1;      // id: 12
    string cid = 2;
    repeated GetCurrencyTokensResponse data = 3;

    string update_date = 4;
}

message GetCurrencyTokenItem {

    string token       = 1;

    //currencyType: currency、 digital, futures
    string currencyType       = 2;

    string name     = 3;

    string icon  = 4;

    string unitName = 5;


    string countryCode = 6;

    map<string, RateBaseData> data = 7;
}

message GetDefaultCurrencyTokensListRequest {
    //命令名称
    int32 cmd = 1;      // id: 13
    string cid = 2;
}

message GetDefaultCurrencyTokensListResponse {

    int32 cmd = 1;      // id: 14
    string cid = 2;

    repeated GetCurrencyTokenItem data = 3;
}

message GetKLineRequest {

    int32 cmd = 1;      // id: 15
    string cid = 2;
    string symbol = 3;
    int32 type = 4;   //1, 1hour  2, 1day
    int64 start_time = 5; //utc time ,
    int64 end_time = 6;  // ust time, 0: to now ,
}

message GetKLineItem {
    string close = 1;
    int64 date = 2;
    string high = 3;
    string low = 4;
    string open = 5;
    string quote_volume = 6;
    string volume = 7;
    string weighted_average = 8;
}

message GetKLineResponse {

    int32 cmd = 1;      // id: 16
    string cid = 2;
    repeated GetKLineItem data = 3;
    bool is_real_time = 4;
}



